--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span>tweeter</span>
+      <span class="nav-title">tweeter</span>
       <div class="new-tweet">
         <p>Write a new tweet</p>
         <i class="fa-solid fa-angles-down"></i> <!--angle-double-down icon-->
