--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-    
+
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -37,8 +37,8 @@
     <header>
       <div>
         <img src="/images/profile-hex.png">
+        <img src="/images/profile-hex.png">
       </div>
-      <br>
       <div>
         <h2>Your Name</h2>
       </div>
