add space between image and name

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <header>
       <div>
         <img src="/images/profile-hex.png">
-        <img src="/images/profile-hex.png">
+        <img src="/images/asfalt-light.png">
       </div>
       <div>
         <h2>Your Name</h2>
