center the page, match the background colour

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,10 @@
     
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <h1>Hello Tweets</h1>
+      <p>Money doesn't just fall from the sky!</p>
+
+    </main>
   </body>
 </html>
