--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
-      <form>
+      <form method="post" action="/api/tweets">
         <label for="tweet-text">What are you humming about?</label>
         <textarea name="text" id="tweet-text"></textarea>
         <div>
