update text area and button

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
 
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
+      <div>
       <form method="post" action="/api/tweets">
         <label for="tweet-text">What are you humming about?</label>
         <textarea name="text" id="tweet-text"></textarea>
@@ -53,14 +54,17 @@
           <button type="submit">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
+        </div>
       </form>
     </section>
 
     <!-- Page-specific (main) content here -->
-    <main class="container">
+    <main>
+
+    <section class="container">
       <h1>Hello Tweets</h1>
       <p>Money doesn't just fall from the sky!</p>
-      
+    </section>  
       
     </main>
   </body>
