implemented character counter

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
 
         <div>
           <button type="submit" class="tweet-btn">Tweet</button>
-          <output name="counter" class="output" for="tweet-text">140</output>
+          <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
       </form>
     </section>
