added tweet styling

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
           <span class="handle">@dexter123</span>
         </header>
     
-        <p>This is a dummy tweet for styling...</p>
+        <p>This is a dummy tweet used for layout and styling purposes.</p>
     
         <footer>
           <span>Posted 10 minutes ago</span>
