added colour variable

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,9 @@
           <span class="handle">@dexter123</span>
         </header>
     
-        <p>This is a dummy tweet used for layout and styling purposes.</p>
+        <section>
+          This is a dummy tweet used for layout and styling purposes.
+        </section>
     
         <footer>
           <span>Posted 10 minutes ago</span>
