added alt attribute in img tag

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     </nav>
     <header>
       <div>
-        <img src="/images/profile-hex.png">
+        <img src="/images/profile-hex.png" alt="profile picture">
       </div>
       <div>
         <h2>Chisu</h2>
