added css varialbes

--- a/public/index.html
+++ b/public/index.html
@@ -72,11 +72,7 @@
           </div>
           <span class="handle">@dexter123</span>
         </header>
-    
-        <section>
-          This is a dummy tweet used for layout and styling purposes.
-        </section>
-    
+        <p>This is a dummy tweet used for layout and styling purposes.</p>
         <footer>
           <span>Posted 10 minutes ago</span>
           <div class="icons">
