--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
 
     <main>
     <section class="new-tweet">
+      <div id="error-message" class="error hidden"></div>
       <form method="post" action="/api/tweets">
         <label for="tweet-text" class="label">What are you humming about?</label>
         <textarea name="text" id="tweet-text" maxlength="140"></textarea>
@@ -66,6 +67,7 @@
     </section>
 
     <section class="tweet-container">
+    
 
     </section>
   </main>
