form toggle button

--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,11 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span class="nav-title">tweeter</span>
-      <div class="new-tweet-arrow">
-        <p>Write a new tweet</p>
-        <i class="fa-solid fa-angles-down"></i> <!--angle-double-down icon-->
+      <div class="nav-right">
+        <button id="compose-toggle" class="compose-button" aria-label="Write a new tweet">
+          Write a new tweet
+        </button>
+        <i id="slide-arrow" class="fa-solid fa-angles-down"></i>
       </div>
     </nav>
     <header>
