--- a/public/index.html
+++ b/public/index.html
@@ -34,10 +34,14 @@
     <nav>
       <span class="nav-title">tweeter</span>
       <div class="nav-right">
-        <button id="compose-toggle" class="compose-button" aria-label="Write a new tweet">
-          Write a new tweet
-        </button>
-        <i id="slide-arrow" class="fa-solid fa-angles-down"></i>
+        <div class="compose-wrapper">
+          <button id="compose-toggle" class="compose-button" aria-label="Write a new tweet">
+            Write a new tweet
+          </button>
+          <div id="arrow-container">
+            <i id="slide-arrow" class="fa-solid fa-angles-down"></i>
+          </div>
+        </div>
       </div>
     </nav>
     <header>
