added new background colour in header

--- a/public/index.html
+++ b/public/index.html
@@ -47,12 +47,10 @@
       </div>
     </nav>
     <header>
-      <div>
+      <section class="avatar-with-name">
         <img src="/images/profile-hex.png" alt="profile picture">
-      </div>
-      <div>
         <h2>Chisu</h2>
-      </div>
+      </section>
     </header>
 
     <main>
