wrapped header img and name

--- a/public/index.html
+++ b/public/index.html
@@ -47,13 +47,15 @@
       </div>
     </nav>
     <header>
-      <section class="avatar-with-name">
+      <section class="profile-section">
         <img src="/images/profile-hex.png" alt="profile picture">
         <h2>Chisu</h2>
       </section>
+      </main>
     </header>
 
     <main>
+    <section class="tweet-section">
     <section class="new-tweet">
       <div id="error-message" class="error hidden"></div>
       <form method="post" action="/api/tweets">
@@ -74,7 +76,7 @@
 
     <section class="tweet-container">
     
-
+    </section>
     </section>
   </main>
 </body>
