--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script src="/scripts/composer-char-counter.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"></script>
+    
 
 
   </head>
@@ -65,7 +66,7 @@
 
             <div>
               <button type="submit" class="tweet-btn">Tweet</button>
-              <output name="counter" class="counter" for="tweet-text">140</output>
+              <span class="counter">140</span>
             </div>
           </form>
         </section>
