implemented char-counting warning

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
           <div id="error-message" class="error hidden"></div>
           <form method="post" action="/api/tweets">
             <label for="tweet-text" class="label">What are you humming about?</label>
-            <textarea name="text" id="tweet-text" maxlength="140"></textarea>
+            <textarea name="text" id="tweet-text" ></textarea>
 
             <div>
               <button type="submit" class="tweet-btn">Tweet</button>
