updated background colour, desktop size @media

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
           <h2>Chisu</h2>
         </section>
       </header>
-      <!-- Tweets Section (right on desktop) -->
+      <!-- New Tweets Section (right on desktop) -->
       <section class="tweet-section">
         <section class="new-tweet">
           <div id="error-message" class="error hidden"></div>
@@ -71,13 +71,29 @@
           </form>
         </section>
 
-        <section class="container">
-          <h1>Hello Tweets</h1>
-          <p>Money doesn't just fall from the sky!</p>
-        </section>
-
         <section class="tweet-container">
+          <article class="tweet">
+            <!-- TWEET HEADER -->
+            <section class="tweet-header">
+              <div class="user-info">
+                <img src="https://via.placeholder.com/50" alt="User avatar">
+                <span class="name">Dexter.B</span>
+              </div>
+              <span class="handle">@dexter123</span>
+            </section>
         
+            <div class="tweet-content">
+            </div>
+        
+            <footer>
+              <span class="date">2 days ago</span>
+              <div class="icons">
+                <i class="fa-regular fa-flag"></i>
+                <i class="fa-regular fa-retweet"></i>
+                <i class="fa-regular fa-heart"></i>
+              </div>
+            </footer>
+          </article>
         </section>
       </section>
     </main>
