fixed error messages in client.js

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
           <form method="post" action="/api/tweets">
             <label for="tweet-text" class="label">What are you humming about?</label>
             <div id="error-message" class="error hidden"></div>
-            <textarea name="text" id="tweet-text" onClick="clear();"></textarea></textarea>
+            <textarea name="text" id="tweet-text" onClick="clearMessage();"></textarea></textarea>
             <div>
               <button type="submit" class="tweet-btn">Tweet</button>
               <span class="counter">140</span>
