--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
       <header>
         <section class="profile-section">
           <img src="/images/profile-hex.png" alt="profile picture">
-          <h2>Chisu</h2>
+          <h2>User</h2>
         </section>
       </header>
       <!-- New Tweets Section (right on desktop) -->
